part2/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gethost
  labels:
    app: gethost
spec:
  serviceName: gethost-ss
  replicas: 3
  selector:
    matchLabels:
      app: gethost-label
  template:
    metadata:
      labels:
        app: gethost-label
    spec:
      containers:
      - name: gethost
        image: docker.io/akshitgrover/gethost:v1
