part2/storage.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
    - name: myfrontend
      image: nginx
      volumeMounts:
      - mountPath: "/myvolume"
        name: ebs-1
  volumes:
    - name: ebs-1
      persistentVolumeClaim:
        claimName: myclaim
