part2/gethost-ss-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gethost-ss
  name: gethost-ss
spec:
  clusterIP: None
  selector:
    app: gethost-label
  type: ClusterIP
