part2/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-rules
spec:
  rules:
  - http:
      paths:
      - path: /v1
        backend:
          serviceName: gethost-v1
          servicePort: 3000
      - path: /v2
        backend:
          serviceName: gethost-v2
          servicePort: 3001
